<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hotSwapGameModeActivity"
        android:background="@drawable/custom_stripes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/hsGmNextButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/play_button_selector"
            android:backgroundTint="#00CBF8"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:onClick="launchHotSwapAddPlayerClass"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/hsGmBackButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/play_button_selector"
            android:backgroundTint="#00CBF8"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:onClick="launchBackChooseGameClass"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/hsGmLogo"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/kahit" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_mode"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:shadowColor="@color/kahitStandard"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.226" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:padding="0dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@drawable/game_mode_custom_round_shape"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <Button
                android:id="@+id/hsFastButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/game_mode_button_normal"
                android:fontFamily="@font/bevietnamextrabolditalic"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="40dp"
                android:text="@string/fast"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/hsStandardButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/game_mode_button_selected"
                android:fontFamily="@font/bevietnamextrabolditalic"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="40dp"
                android:text="@string/standard"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/hsHardButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/game_mode_button_normal"
                android:fontFamily="@font/bevietnamextrabolditalic"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="40dp"
                android:text="@string/hard"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>