<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_stripes"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/hostActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/custom_background_stripes" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hostActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/hLogo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/game_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kahit" />

        <TextView
            android:id="@+id/createLobbyNet_textView_myProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:shadowColor="@color/kahitStandard"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/my_profile"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hLogo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/light_border_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createLobbyNet_textView_myProfile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/light_border_rect"
                android:backgroundTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/createLobbyNet_imageButton_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/custom_round_shape"
                    android:contentDescription="@string/player_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/test5" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bevietnamextrabolditalic"
                    android:text="@string/tap_to_choose_picture"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/createLobbyNet_imageButton_picture"
                    app:layout_constraintStart_toStartOf="@+id/createLobbyNet_imageButton_picture"
                    app:layout_constraintTop_toBottomOf="@+id/createLobbyNet_imageButton_picture" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createLobbyNet_textInputLayout_playerName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/bevietnamextrabolditalic"
                    android:typeface="sans"
                    app:layout_constraintBottom_toBottomOf="@+id/createLobbyNet_imageButton_picture"
                    app:layout_constraintEnd_toStartOf="@+id/createLobbyNet_imageButton_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/createLobbyNet_imageButton_picture">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/createLobbyNet_textInputEditText_playerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions|text|textCapSentences"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:shadowColor="@color/kahitStandard"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:typeface="sans" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lobby_settings"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:shadowColor="@color/kahitStandard"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/light_border_rect"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:background="@drawable/light_border_rect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createLobbyNet_textInputLayout_roomName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/createLobbyNet_textInputEditText_roomName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:typeface="sans"
                        android:background="@drawable/bg_edittext"
                        android:inputType="textNoSuggestions|text|textCapSentences"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:shadowColor="@color/kahitStandard"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/bevietnamextrabolditalic"
                    android:text="@string/select_a_gamemode"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/createLobbyNet_textInputLayout_roomName" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/game_mode_custom_round_shape"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12">

                    <Button
                        android:id="@+id/hsFastButton"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/game_mode_button_normal"
                        android:fontFamily="@font/bevietnamextrabolditalic"
                        android:includeFontPadding="false"
                        android:minWidth="0dp"
                        android:minHeight="40dp"
                        android:text="@string/fast"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/hsStandardButton"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/game_mode_button_selected"
                        android:fontFamily="@font/bevietnamextrabolditalic"
                        android:includeFontPadding="false"
                        android:minWidth="0dp"
                        android:minHeight="40dp"
                        android:text="@string/standard"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/hsHardButton"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/game_mode_button_normal"
                        android:fontFamily="@font/bevietnamextrabolditalic"
                        android:includeFontPadding="false"
                        android:minWidth="0dp"
                        android:minHeight="40dp"
                        android:text="@string/hard"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/hBackButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_selector"
            android:backgroundTint="#00CBF8"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:textSize="17sp"
            android:onClick="launchBackChooseGameClass"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/hCreateButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#00CBF8"
            android:textColor="@color/white"
            android:fontFamily="@font/bevietnamextrabolditalic"
            android:background="@drawable/custom_button_selector"
            android:onClick="launchLobbyNetActivity"
            android:text="Create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>